fixed footer on mobile

--- a/src/MainContainer.css
+++ b/src/MainContainer.css
@@ -56,4 +56,12 @@
   #main-container {
     padding-top: 5vh;
   }
+
+  .non-footer-content {
+    height: calc(100% - 88px);
+  }
+
+  .footer {
+    height: 88px;
+  }
 }
